--- a/index.html
+++ b/index.html
@@ -1,67 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Codse | ReactJS, React Native, Laravel, NodeJS engineers</title>
-    <meta name="keywords" content="Web and mobile app developers, ReactJS, React Native, Hybrid apps developers, Cross-Platform apps developers" />
-    <meta name="description" content="Looking for web and mobile app developers? Let's develop apps in React and React Native" />
-    <style>
-      @import url('https://fonts.googleapis.com/css?family=Saira:300,400,800&display=swap');
-
-      body {
-        margin: 0;
-        font-family: 'Saira', sans-serif;
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-      }
-
-      code {
-        font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-          monospace;
-      }
-
-      body section {
-        box-sizing: border-box;
-        border: 8px solid #9a57b6;
-      }
-
-      .codse {
-        height: 100vh;
-      }
-
-      #home {
-        display: flex;
-        flex-direction: column;
-        flex-wrap: nowrap;
-        height: 100vh;
-        justify-content: center;
-        align-items: center;
-        align-content: stretch;
-      }
-
-      #home h1 {
-        text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.1);
-        color: #9a57b6;
-        font-size: 48px;
-        letter-spacing: 0px;
-        line-height: 1.2;
-        font-weight: 700;
-      }
-
-      #home img {
-        width: 250px;
-      }
-    </style>
+    <meta charset="utf-8" />
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/android-icon-192x192.png"
+    />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#9A56B6" />
+    <meta name="description" content="Mobile and web development agency" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css"
+    />
+    <link rel="apple-touch-icon" href="logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <title>Codse - ReactJS, React Native, Web and Mobile development</title>
+    <link href="/static/css/main.d6a38828.chunk.css" rel="stylesheet" />
   </head>
-  <body data-gr-c-s-loaded="true" cz-shortcut-listen="true">
-    <div id="codse-main">
-      <div class="codse">
-        <section id="home">
-          <img alt="Codse Tech Pvt. Ltd." src="codse_logo.png" />
-          <h1>Codse</h1>
-        </section>
-      </div>
-    </div>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="codse-main"></div>
+    <script>
+      !(function(i) {
+        function e(e) {
+          for (
+            var r, t, n = e[0], o = e[1], u = e[2], l = 0, f = [];
+            l < n.length;
+            l++
+          )
+            (t = n[l]),
+              Object.prototype.hasOwnProperty.call(c, t) &&
+                c[t] &&
+                f.push(c[t][0]),
+              (c[t] = 0);
+          for (r in o)
+            Object.prototype.hasOwnProperty.call(o, r) && (i[r] = o[r]);
+          for (s && s(e); f.length; ) f.shift()();
+          return p.push.apply(p, u || []), a();
+        }
+        function a() {
+          for (var e, r = 0; r < p.length; r++) {
+            for (var t = p[r], n = !0, o = 1; o < t.length; o++) {
+              var u = t[o];
+              0 !== c[u] && (n = !1);
+            }
+            n && (p.splice(r--, 1), (e = l((l.s = t[0]))));
+          }
+          return e;
+        }
+        var t = {},
+          c = { 1: 0 },
+          p = [];
+        function l(e) {
+          if (t[e]) return t[e].exports;
+          var r = (t[e] = { i: e, l: !1, exports: {} });
+          return i[e].call(r.exports, r, r.exports, l), (r.l = !0), r.exports;
+        }
+        (l.m = i),
+          (l.c = t),
+          (l.d = function(e, r, t) {
+            l.o(e, r) ||
+              Object.defineProperty(e, r, { enumerable: !0, get: t });
+          }),
+          (l.r = function(e) {
+            'undefined' != typeof Symbol &&
+              Symbol.toStringTag &&
+              Object.defineProperty(e, Symbol.toStringTag, { value: 'Module' }),
+              Object.defineProperty(e, '__esModule', { value: !0 });
+          }),
+          (l.t = function(r, e) {
+            if ((1 & e && (r = l(r)), 8 & e)) return r;
+            if (4 & e && 'object' == typeof r && r && r.__esModule) return r;
+            var t = Object.create(null);
+            if (
+              (l.r(t),
+              Object.defineProperty(t, 'default', { enumerable: !0, value: r }),
+              2 & e && 'string' != typeof r)
+            )
+              for (var n in r)
+                l.d(
+                  t,
+                  n,
+                  function(e) {
+                    return r[e];
+                  }.bind(null, n)
+                );
+            return t;
+          }),
+          (l.n = function(e) {
+            var r =
+              e && e.__esModule
+                ? function() {
+                    return e.default;
+                  }
+                : function() {
+                    return e;
+                  };
+            return l.d(r, 'a', r), r;
+          }),
+          (l.o = function(e, r) {
+            return Object.prototype.hasOwnProperty.call(e, r);
+          }),
+          (l.p = '/');
+        var r = (this['webpackJsonpcodse-v2'] =
+            this['webpackJsonpcodse-v2'] || []),
+          n = r.push.bind(r);
+        (r.push = e), (r = r.slice());
+        for (var o = 0; o < r.length; o++) e(r[o]);
+        var s = n;
+        a();
+      })([]);
+    </script>
+    <script src="/static/js/2.5311f4b5.chunk.js"></script>
+    <script src="/static/js/main.d2eaae26.chunk.js"></script>
   </body>
 </html>
